--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header class="bg-light   border-bottom">
     <div class="container-fluid px-5 d-lg-block d-none">
       <!-- Top row: Contact and actions -->
-      <div class="row align-items-center py-2">
+      <div class="row align-items-center ">
         <div class="col-md-4 col-12 d-flex align-items-center mb-2 mb-md-0">
           <span class="me-2">
             <i class="bi bi-envelope"></i>
