--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       <div class="row align-items-center ">
         <div class="col-md-4 col-12 d-flex align-items-center mb-2 mb-md-0">
           <span class="me-2">
-            <i class="bi bi-envelope"></i>
+            <i class="bi bi-envelope small"></i>
           </span>
-          <span class="me-3">info@ompackersindia.com</span>
+          <span class="me-3 small">info@ompackersindia.com</span>
           <span class="me-2">
-            <i class="bi bi-person"></i>
+            <i class="bi bi-person small"></i>
           </span>
-          <span class="me-3">India</span>
+          <span class="me-3 small">India</span>
         </div>
         <div class="col-md-8 col-12 text-md-end d-flex justify-content-md-end  align-items-center flex-wrap">
           <a href="#" class="btn btn-success me-2 mb-2 header-btn">₹ Pay Online !</a>
           <a href="#" class="btn btn-info text-white me-2 mb-2 header-btn">Select Nearest Branch</a>
           <span class="me-2 mb-2">
-            <i class="bi bi-telephone"></i>
+            <i class="bi bi-telephone small"></i>
           </span>
-          <span class="fw-bold me-3 mb-2">9070201040</span>
+          <span class="fw-bold me-3 mb-2 small">9070201040</span>
         </div>
       </div>
       <!-- Nav links -->
