--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <!-- ===header-section-start=== -->
-  <header class="bg-light   border-bottom">
+  <header class="border-bottom" style="background-color: #f3f3f3;">
     <div class="container-fluid px-5 d-lg-block d-none">
       <!-- Top row: Contact and actions -->
       <div class="row align-items-center ">
