--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container-fluid bg-white">
       <div class="row mt-2 align-items-center px-2">
         <div class="col-lg-6 col-8 text-Start  mb-2 mb-md-0">
-          <img src="assets/images/logo1.png" alt="Om Packers Logo" class="" style="max-height:70px;">
+          <a href="index.html"><img src="assets/images/logo1.png" alt="Om Packers Logo" class="" style="max-height:70px;"></a>
         </div>
 
         <div class="col-lg-6 col-4 d-flex align-items-center justify-content-end">
@@ -89,48 +89,56 @@
                 <div class="row w-100">
                   <!-- Left Column -->
                   <div class="col-md-3 mb-4">
-                    <h3 class="fw-bold mb-4">Home</h3>
-                    <h4 class="fw-bold mb-4">Contact Us</h4>
+                    <h3 class="fw-bold mb-4"><a class="text-white" href="index.html">Home</a></h3>
+                    <h4 class="fw-bold mb-4"><a class="text-white" href="contacts.html">Contact Us</a></h4>
                     <h4 class="fw-bold mb-3"><i class="bi bi-search"></i> Search</h4>
                   </div>
                   <!-- Company Column -->
                   <div class="col-md-3 mb-4">
-                    <h3 class="fw-bold mb-3">Company <i class="bi bi-chevron-down"></i></h3>
+                    <h3 class="fw-bold mb-3 text-white">Company <i class="bi bi-chevron-down"></i></h3>
                     <ul class="list-unstyled">
-                      <li>About Us</li>
-                      <li>Mission and Vision</li>
-                      <li>Why Choose Us</li>
-                      <li>IBA Approved Packers</li>
-                      <li>FAQ</li>
-                      <li>Awards and Achievements</li>
-                      <li>Careers</li>
-                      <li>Testimonials</li>
+                      <li><a href="about.html">About Us</a></li>
+                      <li><a href="mission-and-vision.html">Mission and Vision</a></li>
+                      <li><a href="why-choose-us.html">Why Choose Us</a></li>
+                      <li><a href="iba-approved-packers-in-delhi.html">IBA Approved Packers</a></li>
+                      <li><a href="faq.html">FAQ</a></li>
+                      <li><a href="awards-and-acheivements.html">Awards and Achievements</a></li>
+                      <li><a href="careers.html">Careers</a></li>
+                      <li><a href="Testimonials.html">Testimonials</a></li>
                     </ul>
                   </div>
                   <!-- Services Column -->
                   <div class="col-md-3 mb-4">
-                    <h3 class="fw-bold mb-3">Services <i class="bi bi-chevron-down"></i></h3>
+                    <h3 class="fw-bold mb-3 text-white">Services <i class="bi bi-chevron-down"></i></h3>
                     <ul class="list-unstyled">
-                      <li>Home Shifting Services</li>
-                      <li>Office Shifting Services</li>
-                      <li>Car Transportation Services</li>
-                      <li>Courier & Cargo Services</li>
-                      <li>Luggage Delivery</li>
-                      <li>Goods Insurance</li>
-                      <li>IBA Approved Transporters</li>
+                      <li><a href="home-shifting-in-delhi.html">Home Shifting Services</a></li>
+                      <li><a href="home-shifting-in-delhi.html">Office Shifting Services</a></li>
+                      <li><a href="home-shifting-in-delhi.html">Car Transportation Services</a></li>
+                      <li><a href="home-shifting-in-delhi.html">Courier & Cargo Services</a></li>
+                      <li><a href="home-shifting-in-delhi.html">Luggage Delivery</a></li>
+                      <li><a href="home-shifting-in-delhi.html">Goods Insurance</a></li>
+                      <li><a href="home-shifting-in-delhi.html">IBA Approved Transporters</a></li>
+                       <li><a href="home-shifting-in-delhi.html">Loading and Unloading</a></li>
+                        <li><a href="home-shifting-in-delhi.html">Packing and Unpacking</a></li>
+                         <li><a href="home-shifting-in-delhi.html">Bill For Claim</a></li>
+                          <li><a href="home-shifting-in-delhi.html">All India Services</a></li>
                     </ul>
                   </div>
                   <!-- Activities Column -->
                   <div class="col-md-3 mb-4">
-                    <h3 class="fw-bold mb-3">Activities <i class="bi bi-chevron-down"></i></h3>
+                    <h3 class="fw-bold mb-3 text-white">Activities <i class="bi bi-chevron-down"></i></h3>
                     <ul class="list-unstyled">
-                      <li>Our Blog</li>
-                      <li>Pay Online</li>
-                      <li>Track your Shipment</li>
-                      <li>Become a Partner</li>
-                      <li>Moving Tips and Suggestions</li>
-                      <li>Detect Fraud Packers Tips</li>
-                      <li>Shipment Gallery</li>
+                      <li><a href="blog.html">Our Blog</a></li>
+                      <li><a href="payment.html">Pay Online</a></li>
+                      <li><a href="tracking.html">Track your Shipment</a></li>
+                      <li><a href="franchise.html">Become a Partner</a></li>
+                      <li><a href="packing-moving-tips.html">Moving Tips and Suggestions</a></li>
+                      <li><a href="how-to-detect-fraud-packers.html">Detect Fraud Packers Tips</a></li>
+                      <li><a href="gallery.html">Shipment Gallery</a></li>
+                      <li><a href="video-gallery.html">Video Gallery</a></li>
+                      <li><a href="reviews-feedbacks.html">Reviews & Feedbacks</a></li>
+                      <li><a href="complaints.html">Submit a Complaint</a></li>
+                    
                     </ul>
                   </div>
                 </div>
@@ -152,7 +160,6 @@
       </div>
     </div>
   </header>
-
   <!-- ===header-section-end=== -->
 
   <!-- ===Hero-section-start=== -->
