--- a/index.html
+++ b/index.html
@@ -290,18 +290,17 @@
     </section>
     <!-- ===Shifting-Types-section-end=== -->
     <!-- ===Why-Choose-section-Start=== -->
-    <section style="z-index: 1; position: relative;" class="Why-Choose overflow-x-hidden">
+    <section style="z-index: 1; position: relative;" class="Why-Choose">
       <div class="container">
         <div class="row g-4 align-items-start">
           <!-- Left: Truck & Crew Image -->
-          <div class="col-lg-5 mb-4 mb-lg-0 wow animate__animated animate__fadeInLeft sticky-lg-top "
-            data-wow-delay="0.1s">
+          <div class="col-lg-5 mb-4 mb-lg-0 sticky-lg-top">
             <div class="">
               <img src="assets/images/s10.webp" alt="All India Shifting Team" width="100%" class="" />
             </div>
           </div>
           <!-- Right: Text + Highlights -->
-          <div class="col-lg-7 wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">
+          <div class="col-lg-7">
             <div class="Why-Choose-Content">
               <h5 class="fw-bold mb-2">ISO 9001:2015 CERTIFIED COMPANY</h5>
               <h2 class="fw-bold display-5 text-dark mb-2">
