--- a/packing-moving-tips.html
+++ b/packing-moving-tips.html
@@ -246,7 +246,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="sticky-lg-top">
+                    <div class="sticky-lg-top"style="z-index: 1;">
                         <img src="assets/images/allshifting.jpeg.jpg" alt="">
                     </div>
                 </div>
