--- a/franchise.html
+++ b/franchise.html
@@ -210,7 +210,7 @@
 <p>Since 2007, as a leading moving company, we have been an ISO 9001:2015 and ISO 39001:2012 certified, IBA approved Packers and Movers company, promising and delivering throughout India.</p>
 <!-- Franchise-Section HTML using Bootstrap -->
 <div class="container Franchise-Section my-4">
-  <div class="row justify-content-center">
+  <div class="row g-4 justify-content-center">
     <div class="col-md-6">
     
  <form>
