--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <!-- ===header-section-start=== -->
-     <div class="container-fluid px-lg-5 "style="background-color: #f3f3f3;">
+     <div class="container-fluid px-lg-5 py-2 d-lg-block d-none"style="background-color: #f3f3f3;">
       <!-- Top row: Contact and actions -->
       <div class="row align-items-center ">
         <div class="col-md-9 col-12 d-flex align-items-center justify-content-center flex-wrap  mb-md-0">
@@ -33,19 +33,19 @@
           <span class="me-3 small">India</span> -->
           
         </div>
-        <div class="col-md-3 col-12 text-md-end d-flex justify-content-md-end  align-items-center flex-wrap d-lg-block d-none">
-          <a href="#" class="btn btn-success me-2 mb-2 header-btn">₹ Pay Online !</a>
-          <a href="#" class="btn btn-info text-white me-2 mb-2 header-btn">Select Nearest Branch</a>
+        <div class="col-md-3 col-12 text-md-end   align-items-center flex-wrap ">
+         
+          <a href="#" class="btn  text-white me-2 mb-2 header-btn">Select Nearest Branch</a>
            </div>
       </div>
       <!-- Nav links -->
-      <div class="row align-items-center d-lg-block d-none">
+      <div class="row align-items-center ">
         <div class="col d-flex flex-wrap align-items-center justify-content-center header-second-link">
-          <a href="#" class="me-3">Beware of Online Frauds</a>
+          <a href="#" class="me-3">Reviews & Feedbacks</a>
           <a href="#" class="me-3 ">Branch Address</a>
           <a href="#" class="me-3">Request a Quote</a>
           <a class="me-3">India Helpline +91 9070201040</a>
-          <a href="#" class="me-3">Become a Branch Partner</a>
+          <a href="#" class="me-3">Submit a Complaint</a>
           <a class="text-danger">* Since <strong>2007</strong> at your service *</a>
         </div>
       </div>
@@ -55,12 +55,30 @@
     <!-- Main branding/logo row -->
      <div class="container-fluid bg-white">
       <div class="row mt-2 align-items-center px-2">
-        <div class="col-lg-6 col-8 text-Start  mb-2 mb-md-0">
+        <div class="col-lg-2 col-8 text-Start  mb-2 mb-md-0 d-block d-lg-none">
           <a href="index.html"><img src="assets/images/logos.png" alt="All India Shifting Logo" class=""
               style="max-height:80px;"></a>
         </div>
-
-        <div class="col-lg-6 col-4 d-flex align-items-center justify-content-end">
+<div class="col-lg-9 d-lg-block d-none">
+  <div class="">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white header-navbar">
+  <div class="container-fluid p-0">
+     <a class="navbar-brand" href="#"><img src="assets/images/logos.png" alt="All India Shifting Logo" class=""
+              style="max-height:80px;"></a>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="#">Branch Partner</a>
+         <a class="nav-link" href="#">Payment Details</a>
+           <a class="nav-link" href="#">Beware of Online Frauds</a>
+      </div>
+    </div>
+  </div>
+</nav>
+  </div>
+</div>
+        <div class="col-lg-3 col-4 d-flex align-items-center justify-content-end">
           <a href="#" class="btn request-btn px-4 py-2 d-lg-block d-none" data-bs-toggle="modal" data-bs-target="#quoteModal">Request a Quote</a>
           <span class="ms-3 search-box-outer d-lg-block d-none">
             <i class="fas fa-search"></i>
